--- a/src/test/java/resources/application-test.properties
+++ b/src/test/java/resources/application-test.properties
@@ -1,8 +1,8 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url= jdbc:postgresql://localhost:5432/postgres_test
 
 spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.datasource.tomcat.validation-query=SELECT 1 
+spring.datasource.tomcat.validation-query=SELECT 1
 
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
